# langchain-auto-dag-app

./: .gitignore  .zshrc  LICENSE  Makefile  README.md  auto_dag.sh  install.sh  pyproject.toml
.github/workflows/: run_tests.yaml
auto_dag_app/: exceptions.py  main.py  params.py  preprompt.py
auto_dag_app/create_dag/: create_dag.py
auto_dag_app/extract_and_process/: extract.py  process.py
tests/: test_create_dag.py  test_extract.py  test_process.py
tests/test_files/: fake_test_file_extract.txt  test_file_process_1.py  test_file_process_2.py
