[tool.poetry]
name = "langchain-auto-dag-app"
version = "0.2.0"
description = ""
authors = ["DridrM"]
readme = "README.md"
packages = [{include = "auto_dag_app"}]

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.test.dependencies]
pytest = "^8.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
