[tool.poetry]
name = "langchain-auto-dag-app"
version = "1.0.0"
description = ""
authors = ["DridrM"]
readme = "README.md"
packages = [{include = "auto_dag_app"}]

[tool.poetry.dependencies]
python = "^3.12"
ipykernel = "^6.29.4"
langchain = "^0.2.5"
langchain-community = "^0.2.5"
openai = "^1.35.3"
langchain-openai = "^0.1.9"


[tool.poetry.group.test.dependencies]
pytest = "^8.2.1"
pre-commit = "^3.7.1"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
